@@ -35,6 +35,7 @@ This release includes the following bugfixes:
  o rate limiting works better
  o getting FTP response code errors when using the multi-interface caused
    libcurl to leak memory
+ o no more SIGPIPE when GnuTLS is used
 
 Other curl-related news:
 
@@ -53,6 +54,6 @@ advice from friends like these:
  James Housley, Olaf Stueben, Yang Tse, Gisle Vanem, Bradford Bruce,
  Ciprian Badescu, Dmitriy Sergeyev, Nir Soffer, Venkat Akella, Toon Verwaest,
  Matt Witherspoon, Alexey Simak, Martin Skinner, Sh Diao, Jared Lundell,
- Stefan Krause, Sebastien Willemijns, Alexey Simak
+ Stefan Krause, Sebastien Willemijns, Alexey Simak, Brendan Jurd
 
         Thanks! (and sorry if I forgot to mention someone)
